lab 10 finish