@@ -5,14 +5,20 @@ import java.util.Arrays;
 public class GameState {
 
     private final Cell[] cells;
+    private final String currentPlayer; // New field for current player
+    private final String winner; // New field for winner
 
-    private GameState(Cell[] cells) {
+    private GameState(Cell[] cells, String currentPlayer, String winner) {
         this.cells = cells;
+        this.currentPlayer = currentPlayer;
+        this.winner = winner;
     }
 
     public static GameState forGame(Game game) {
         Cell[] cells = getCells(game);
-        return new GameState(cells);
+        String currentPlayer = game.getPlayer() == Player.PLAYER0 ? Player.PLAYER0.toString() : Player.PLAYER1.toString();
+        String winner = game.getWinner() == null ? "" : game.getWinner().toString();
+        return new GameState(cells, currentPlayer, winner);
     }
 
     public Cell[] getCells() {
@@ -25,9 +31,12 @@ public class GameState {
      */
     @Override
     public String toString() {
-        return """
-                { "cells": %s}
-                """.formatted(Arrays.toString(this.cells));
+        // return """
+        //         { "cells": %s}
+        //         """.formatted(Arrays.toString(this.cells));
+
+        return String.format("{ \"cells\": %s, \"currentPlayer\": \"%s\", \"winner\": \"%s\" }",
+                Arrays.toString(this.cells), this.currentPlayer, this.winner);
     }
 
     private static Cell[] getCells(Game game) {
